--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -3,7 +3,7 @@
   become: yes
   tasks:
   - name: diable old nodejs and enable nodejs18
-    ansible.builtin.command: dnf module disable nodejs -y ; dnf module enable nodejs:18 -y
+    ansible.builtin.shell: dnf module disable nodejs -y ; dnf module enable nodejs:18 -y
 
   - name: install nodejs
     ansible.builtin.package:
