--- a/redis.yaml
+++ b/redis.yaml
@@ -18,8 +18,8 @@
   - name: enable remote connection
     ansible.builtin.replace:
       path: /etc/redis.conf
-      regexp: 127.0.0.1
-      replace: 0.0.0.0
+      regexp: '127.0.0.1'
+      replace: '0.0.0.0'
 
   - name enable and start redis
     ansible.builtin.service:
