--- a/web.yaml
+++ b/web.yaml
@@ -3,7 +3,7 @@
   become: yes
   tasks:
   - name: install nginx
-    ansible.builtin.packahge:
+    ansible.builtin.package:
       name: nginx
       state: present
 
