--- a/web.yaml
+++ b/web.yaml
@@ -18,7 +18,7 @@
       state: directory
 
   - name: download web conent
-    ansible.builtin.grt_url:
+    ansible.builtin.get_url:
       url: https://roboshop-builds.s3.amazonaws.com/web.zip
       dest: /tmp
 
